Add "EnableEncryption" to WeaveNetworkingSpec to support Weave network encryption.

--- a/upup/models/cloudup/resources/addons/networking.weave/k8s-1.7.yaml.template
+++ b/upup/models/cloudup/resources/addons/networking.weave/k8s-1.7.yaml.template
@@ -130,6 +130,13 @@ spec:
             - name: CONN_LIMIT
               value: "{{ .Networking.Weave.ConnLimit }}"
             {{- end }}
+            {{- if .Networking.Weave.EnableEncryption }}
+            - name: WEAVE_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: weave
+                  key: password
+            {{- end }}
           image: 'weaveworks/weave-kube:2.3.0'
           livenessProbe:
             httpGet:
